--- a/.muttrc
+++ b/.muttrc
@@ -4,11 +4,12 @@
 #set folder="imap://orenhe@localhost/"
 #set smtp_url="smtp://d06ml310.ibm.com"
 
-set pager_stop          # don't move to the next message on next-page
-set sendmail_wait=2     # how long to wait before backgrounding sends
+set mime_forward=ask-yes # prompt: forward as message/rfc822 attachment?
+set pager_stop           # don't move to the next message on next-page
+set sendmail_wait=2      # how long to wait before backgrounding sends
 set forward_format="Fwd: %s"
 set query_command = "/home/orenhe/bin/mutt_ldap_query '%s'"
-set trash="=Trash"
+set trash = "imap://localhost/Trash"
 set hostname="orenhe-laptop"
 set realname="Oren Held"
 set sort="date"
@@ -24,10 +25,11 @@ set editor="vim +':set textwidth=80'"
 bind index "^" imap-fetch-mail
 
 # Base hook to reset account variables to known state before activating new ones
-account-hook . 'unset preconnect imap_user imap_pass imap_authenticators trash; set ssl_starttls=ask-yes'
+account-hook . 'unset preconnect imap_user imap_pass imap_authenticators; set ssl_starttls=ask-yes'
+folder-hook . 'unset trash'
 
 #WORK
-account-hook imap://localhost/ 'set imap_user=orenhe'
+account-hook imap://localhost/ 'set imap_user=orenhe ssl_starttls=no'
 folder-hook imap://localhost/ 'source ~/.mutt/work'
 set folder=imap://localhost/INBOX
 mailboxes = =INBOX
