purge-message hotkey

--- a/.muttrc
+++ b/.muttrc
@@ -14,6 +14,10 @@ set realname="Oren Held"
 set sort="date"
 set use_from=yes
 
+bind pager \eD purge-message   # Esc-D to purge a message (no copy to Trash)
+bind index \eD purge-message   # Esc-D to purge a message (no copy to Trash)
+
+
 # View URLs inside Mutt
 macro index \cb   "|urlview\n"
 macro pager \cb   "|urlview\n"
