--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Support for 256 colors
-set -g default-terminal "xterm-256color" # screen-256color?
+set -g default-terminal "screen-256color"
 # bind vi key-mapping
 set -g status-keys vi
 # vi-style controls for copy mode
@@ -20,7 +20,7 @@ set -g automatic-rename
 ######## Bindings ########
 # bind C-a to the previously active window
 # force a reload of the config file
-  bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf
 
 ### COLOUR - Solarized
 
@@ -32,12 +32,12 @@ set-option -g status-attr default
 # default window title colors
 set-window-option -g window-status-fg colour244
 set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-fg colour166 #orange
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
