TMUX: import env vars

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,3 +53,6 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# Append ENV VARs to be copied into the session
+set -ga update-environment " DBUS_SESSION_BUS_ADDRESS GNOME_KEYRING_CONTROL GPG_AGENT_INFO KRB5CCNAME"
